Комментарий тот же - статика админки не подгружается, при создании рецепта не отображаются ингредиенты и тэги

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,12 +14,17 @@ server {
   
      location /media/ { 
          alias /app/media/; 
-     } 
+     }
   
      location /api/docs/ { 
          root /app/static/; 
          try_files $uri $uri/redoc.html; 
-     } 
+     }
+
+     location /backend_static/{
+         alias /backend_static/;
+     }
+
      location / { 
          root /app/static/; 
          index  index.html index.htm; 
