--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -22,7 +22,7 @@ server {
      }
 
      location /backend_static/{
-         alias /backend_static/;
+         alias /app/static/;
      }
 
      location / { 
@@ -33,10 +33,6 @@ server {
          proxy_set_header        X-Real-IP $remote_addr; 
          proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for; 
          proxy_set_header        X-Forwarded-Proto $scheme; 
-       } 
-       error_page   500 502 503 504  /50x.html; 
-       location = /50x.html { 
-         root   /var/html/frontend/; 
        } 
   
  }
