--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,8 @@ services:
      env_file: .env 
      image: postgres:13 
      volumes: 
-       - pg_data:/var/lib/postgresql/data/ 
+       - pg_data:/var/lib/postgresql/data/
+      #  - ./init-scripts:/docker-entrypoint-initdb.d
      restart: always 
   
    backend: 
