Сиди и сияй, тестовый на проверку pep8

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -1,9 +1,9 @@
-name: Main Taski workflow
+name: Master Foodgram workflow
 
 on:
   push:
     branches:
-      - main
+      - master
 
 jobs:
   tests:
