--- a/setup.cfg
+++ b/setup.cfg
@@ -13,4 +13,6 @@ exclude =
     */env/,
 # Не проверять указанные файлы на соответствие определённым правилам:
 per-file-ignores =
-    */settings.py:E501 
+    */settings.py:E501,
+    */my_data.py,
+    */my_data2.py
