Сиди и сияй, тестовый на проверку pep8

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,6 +13,4 @@ exclude =
     */env/,
 # Не проверять указанные файлы на соответствие определённым правилам:
 per-file-ignores =
-    */settings.py:E501,
-    */my_data.py,
-    */my_data2.py
+    */settings.py:E501
