--- a/backend/foodgram/requirements.txt
+++ b/backend/foodgram/requirements.txt
@@ -22,6 +22,7 @@ Pillow==10.0.0
 psycopg2-binary==2.9.3 
 pycparser==2.21
 PyJWT==2.8.0
+python-dotenv==1.0.0
 python3-openid==3.2.0
 pytz==2023.3
 reportlab==4.0.4
